@@ -22,7 +22,6 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.annotation.Import;
-import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 
@@ -32,21 +31,28 @@ import eu.xfsc.fc.core.config.DocumentLoaderConfig;
 import eu.xfsc.fc.core.config.DocumentLoaderProperties;
 import eu.xfsc.fc.core.config.FileStoreConfig;
 import eu.xfsc.fc.core.config.ProtectedNamespaceProperties;
-import eu.xfsc.fc.core.dao.schemas.SchemaJpaDao;
-import eu.xfsc.fc.core.dao.assets.AssetJpaDao;
+import eu.xfsc.fc.core.dao.impl.SchemaDaoImpl;
+import eu.xfsc.fc.core.dao.impl.AssetDaoImpl;
 import eu.xfsc.fc.core.dao.impl.ValidatorCacheDaoImpl;
 import eu.xfsc.fc.core.pojo.ContentAccessorDirect;
 import eu.xfsc.fc.core.pojo.GraphQuery;
 import eu.xfsc.fc.core.pojo.CredentialClaim;
 import eu.xfsc.fc.core.pojo.AssetMetadata;
 import eu.xfsc.fc.core.pojo.CredentialVerificationResultOffering;
+import eu.xfsc.fc.core.service.resolve.DidDocumentResolver;
 import eu.xfsc.fc.core.service.resolve.HttpDocumentResolver;
 import eu.xfsc.fc.core.service.schemastore.SchemaStoreImpl;
 import eu.xfsc.fc.core.service.assetstore.AssetStoreImpl;
+import eu.xfsc.fc.core.service.assetstore.IriGenerator;
+import eu.xfsc.fc.core.service.assetstore.IriValidator;
 import eu.xfsc.fc.core.service.verification.CredentialVerificationStrategy;
+import eu.xfsc.fc.core.service.verification.JwtContentPreprocessor;
 import eu.xfsc.fc.core.service.verification.SchemaValidationServiceImpl;
 import eu.xfsc.fc.core.service.verification.ProtectedNamespaceFilter;
+import eu.xfsc.fc.core.service.verification.Vc11Processor;
+import eu.xfsc.fc.core.service.verification.Vc2Processor;
 import eu.xfsc.fc.core.service.verification.VerificationServiceImpl;
+import eu.xfsc.fc.core.service.verification.signature.JwtSignatureVerifier;
 import eu.xfsc.fc.graphdb.config.GraphDbConfig;
 import eu.xfsc.fc.graphdb.config.EmbeddedNeo4JConfig;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
@@ -57,9 +63,12 @@ import io.zonky.test.db.AutoConfigureEmbeddedDatabase.DatabaseProvider;
 @SpringBootTest
 @ActiveProfiles("test")
 @ContextConfiguration(classes = {Neo4jGraphStoreAccuracyTest.TestApplication.class, DatabaseConfig.class, GraphDbConfig.class, FileStoreConfig.class, Neo4jGraphStoreAccuracyTest.class,
-	Neo4jGraphStore.class, AssetStoreImpl.class, AssetJpaDao.class, VerificationServiceImpl.class, SchemaStoreImpl.class, SchemaJpaDao.class, ValidatorCacheDaoImpl.class,
+	Neo4jGraphStore.class, AssetStoreImpl.class, AssetDaoImpl.class, IriGenerator.class, IriValidator.class,
+	VerificationServiceImpl.class, SchemaStoreImpl.class, SchemaDaoImpl.class, ValidatorCacheDaoImpl.class,
 	DidResolverConfig.class, DocumentLoaderConfig.class, DocumentLoaderProperties.class, HttpDocumentResolver.class,
-	CredentialVerificationStrategy.class, SchemaValidationServiceImpl.class, ProtectedNamespaceFilter.class, ProtectedNamespaceProperties.class})
+	CredentialVerificationStrategy.class, SchemaValidationServiceImpl.class, ProtectedNamespaceFilter.class, ProtectedNamespaceProperties.class,
+	JwtContentPreprocessor.class, Vc11Processor.class, Vc2Processor.class,
+	JwtSignatureVerifier.class, DidDocumentResolver.class})
 @AutoConfigureEmbeddedDatabase(provider = DatabaseProvider.ZONKY)
 @Import(EmbeddedNeo4JConfig.class)
 public class Neo4jGraphStoreAccuracyTest {
@@ -71,7 +80,6 @@ public class Neo4jGraphStoreAccuracyTest {
   private final String SERVICE_CREDENTIAL_FILE_NAME3 = "serviceOfferingCredential3.jsonld";
 
   @SpringBootApplication
-  @EnableJpaRepositories(basePackages = "eu.xfsc.fc.core.dao")
   public static class TestApplication {
 
     public static void main(String[] args) {
@@ -90,7 +98,7 @@ public class Neo4jGraphStoreAccuracyTest {
 
   
   @BeforeAll
-  void addDBEntries() throws Exception {
+  void addDBEntries() throws IOException {
     initialiseAllDataBaseWithManuallyAddingCredential();
   }
 
@@ -100,7 +108,7 @@ public class Neo4jGraphStoreAccuracyTest {
   }
 
   @Test
-  public void testCypherServiceOfferingAccuracy() throws Exception {
+  public void testCypherServiceOfferingAccuracy() {
 
 
     List<Map<String, Object>> resultListExpected = List.of(Map.of("n", Map.of("name", "Portal", "claimsGraphUri", List.of("http://w3id.org/gaia-x/indiv#serviceMVGPortal.json"))));
@@ -113,7 +121,7 @@ public class Neo4jGraphStoreAccuracyTest {
   }
 
   @Test
-  public void testCypherServiceOfferingByURIAccuracy() throws Exception {
+  public void testCypherServiceOfferingByURIAccuracy() {
     /*expected only one node as previous added claims with same ID deleted from code*/
     List<Map<String, String>> resultListExpected = List.of(
             Map.of("n.name", "Portal3"));
@@ -126,7 +134,7 @@ public class Neo4jGraphStoreAccuracyTest {
   }
 
   @Test
-  public void testCypherAllServiceOfferingAccuracy() throws Exception {
+  public void testCypherAllServiceOfferingAccuracy() {
 
     List<Map<String, Object>> resultListExpected = List.of(Map.of("n", Map.of("name", "Portal", "claimsGraphUri", List.of("http://w3id.org/gaia-x/indiv#serviceMVGPortal.json"))),Map.of("n", Map.of("name", "Portal2", "claimsGraphUri", List.of("http://w3id.org/gaia-x/indiv#serviceMVGPortal2.json"))),Map.of("n", Map.of("name", "Portal3", "claimsGraphUri", List.of("http://w3id.org/gaia-x/indiv#serviceMVGPortal3.json"))),Map.of("n",Map.of("name","Portal2","claimsGraphUri", List.of("http://w3id.org/gaia-x/indiv#serviceMVGPortal4.json"))));
 
@@ -138,7 +146,7 @@ public class Neo4jGraphStoreAccuracyTest {
 
 
   @Test
-  void testCypherAllServiceOfferingWithNameAndURI_IN_ClauseAccuracy() throws Exception {
+  void testCypherAllServiceOfferingWithNameAndURI_IN_ClauseAccuracy() {
 
     List<Map<String, String>> resultListExpected = List.of(
             Map.of("name", "Portal2", "uri", "http://w3id.org/gaia-x/indiv#serviceMVGPortal2.json"),
@@ -153,7 +161,7 @@ public class Neo4jGraphStoreAccuracyTest {
   }
 
   @Test
-  void testCypherTotalCount() throws Exception {
+  void testCypherTotalCount() {
 
     GraphQuery queryDelta = new GraphQuery(
             "MATCH (n)  RETURN n LIMIT $limit", Map.of("limit", 25));
@@ -313,7 +321,7 @@ public class Neo4jGraphStoreAccuracyTest {
 
 
     List<Map<String, Object>> responseCypherByLocality = neo4jGraphStore.queryData(queryCypherByLocality).getResults();
-    Map<String, Object>  resultActualMap = responseCypherByLocality.get(0);
+    Map<String, Object>  resultActualMap = responseCypherByLocality.getFirst();
     Assertions.assertEquals(2,responseCypherByLocality.size());
     //Assertions.assertEquals(Collections.singletonList("http://example.org/test-issuer2"), resultActualMap.get("n.claimsGraphUri"));
 
@@ -323,7 +331,7 @@ public class Neo4jGraphStoreAccuracyTest {
     neo4jGraphStore.deleteClaims(credentialSubject3);
   }
 
-  private void initialiseAllDataBaseWithManuallyAddingCredential() throws Exception {
+  private void initialiseAllDataBaseWithManuallyAddingCredential() throws IOException {
 
     ContentAccessorDirect contentAccessor = new ContentAccessorDirect(getMockFileDataAsString(SERVICE_CREDENTIAL_FILE_NAME));
     CredentialVerificationResultOffering verificationResult =
@@ -342,7 +350,7 @@ public class Neo4jGraphStoreAccuracyTest {
     List<CredentialClaim> claimFile = List.of(claim, claimName);
 
     verificationResult.setClaims(claimFile);
-    verificationResult.setId(claimFile.get(0).getSubjectValue());
+    verificationResult.setId(claimFile.getFirst().getSubjectValue());
 
     AssetMetadata assetMetadata = new AssetMetadata(verificationResult.getId(),
             verificationResult.getIssuer(), new ArrayList<>(), contentAccessor);
@@ -365,7 +373,7 @@ public class Neo4jGraphStoreAccuracyTest {
     List<CredentialClaim> claimFile1 = List.of(claim1, claimName1);
 
     verificationResult2.setClaims(claimFile1);
-    verificationResult2.setId(claimFile1.get(0).getSubjectValue());
+    verificationResult2.setId(claimFile1.getFirst().getSubjectValue());
 
     AssetMetadata assetMetadata2 = new AssetMetadata(
             verificationResult2.getId(),
@@ -389,7 +397,7 @@ public class Neo4jGraphStoreAccuracyTest {
     List<CredentialClaim> claimFile3 = List.of(claim3, claimName3);
 
     verificationResult3.setClaims(claimFile3);
-    verificationResult3.setId(claimFile3.get(0).getSubjectValue());
+    verificationResult3.setId(claimFile3.getFirst().getSubjectValue());
 
     AssetMetadata assetMetadata3 = new AssetMetadata(
             verificationResult3.getId(),
@@ -416,7 +424,7 @@ public class Neo4jGraphStoreAccuracyTest {
     List<CredentialClaim> claimFile4 = List.of(claim4, claimName4);
 
     verificationResult4.setClaims(claimFile4);
-    verificationResult4.setId(claimFile4.get(0).getSubjectValue());
+    verificationResult4.setId(claimFile4.getFirst().getSubjectValue());
 
     AssetMetadata assetMetadata4 = new AssetMetadata(
             verificationResult4.getId(),
