@@ -1,20 +1,34 @@
 package eu.xfsc.fc.core.service.assetstore;
 
-import static eu.xfsc.fc.core.util.TestUtil.assertThatAssetHasTheSameData;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
-import java.io.IOException;
-import java.io.UnsupportedEncodingException;
-import java.time.Instant;
-import java.time.temporal.ChronoUnit;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-
+import eu.xfsc.fc.api.generated.model.AssetStatus;
+import eu.xfsc.fc.core.config.DatabaseConfig;
+import eu.xfsc.fc.core.config.DidResolverConfig;
+import eu.xfsc.fc.core.config.DocumentLoaderConfig;
+import eu.xfsc.fc.core.config.DocumentLoaderProperties;
 import eu.xfsc.fc.core.config.FileStoreConfig;
 import eu.xfsc.fc.core.config.RdfContentTypeProperties;
+import eu.xfsc.fc.core.dao.impl.AssetDaoImpl;
+import eu.xfsc.fc.core.exception.ConflictException;
+import eu.xfsc.fc.core.exception.NotFoundException;
+import eu.xfsc.fc.core.pojo.AssetFilter;
+import eu.xfsc.fc.core.pojo.AssetMetadata;
+import eu.xfsc.fc.core.pojo.ContentAccessor;
+import eu.xfsc.fc.core.pojo.ContentAccessorDirect;
+import eu.xfsc.fc.core.pojo.CredentialClaim;
+import eu.xfsc.fc.core.pojo.CredentialVerificationResult;
+import eu.xfsc.fc.core.pojo.CredentialVerificationResultOffering;
+import eu.xfsc.fc.core.pojo.GraphQuery;
+import eu.xfsc.fc.core.pojo.PaginatedResults;
+import eu.xfsc.fc.core.pojo.Validator;
+import eu.xfsc.fc.core.service.graphdb.DummyGraphStore;
+import eu.xfsc.fc.core.service.graphdb.GraphStore;
+import eu.xfsc.fc.core.service.resolve.DidDocumentResolver;
+import eu.xfsc.fc.core.service.resolve.HttpDocumentResolver;
+import eu.xfsc.fc.core.service.verification.signature.JwtSignatureVerifier;
+import eu.xfsc.fc.core.util.HashUtils;
+import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
+import io.zonky.test.db.AutoConfigureEmbeddedDatabase.DatabaseProvider;
+import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.MethodOrderer;
@@ -25,50 +39,36 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 
-import eu.xfsc.fc.api.generated.model.AssetStatus;
-import eu.xfsc.fc.core.config.DatabaseConfig;
-import eu.xfsc.fc.core.config.DidResolverConfig;
-import eu.xfsc.fc.core.config.DocumentLoaderConfig;
-import eu.xfsc.fc.core.config.DocumentLoaderProperties;
-import eu.xfsc.fc.core.dao.assets.AssetJpaDao;
-import eu.xfsc.fc.core.exception.ConflictException;
-import eu.xfsc.fc.core.exception.NotFoundException;
-import eu.xfsc.fc.core.pojo.ContentAccessor;
-import eu.xfsc.fc.core.pojo.ContentAccessorDirect;
-import eu.xfsc.fc.core.pojo.GraphQuery;
-import eu.xfsc.fc.core.pojo.PaginatedResults;
-import eu.xfsc.fc.core.pojo.CredentialClaim;
-import eu.xfsc.fc.core.pojo.AssetFilter;
-import eu.xfsc.fc.core.pojo.AssetMetadata;
-import eu.xfsc.fc.core.pojo.Validator;
-import eu.xfsc.fc.core.pojo.CredentialVerificationResult;
-import eu.xfsc.fc.core.pojo.CredentialVerificationResultOffering;
-import eu.xfsc.fc.core.service.graphdb.DummyGraphStore;
-import eu.xfsc.fc.core.service.graphdb.GraphStore;
-import eu.xfsc.fc.core.service.resolve.HttpDocumentResolver;
-import eu.xfsc.fc.core.util.HashUtils;
-import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
-import io.zonky.test.db.AutoConfigureEmbeddedDatabase.DatabaseProvider;
-import lombok.extern.slf4j.Slf4j;
+import java.io.IOException;
+import java.io.UnsupportedEncodingException;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+
+import static eu.xfsc.fc.core.util.TestUtil.assertThatAssetHasTheSameData;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @TestMethodOrder(MethodOrderer.MethodName.class)
 @SpringBootTest
 @ActiveProfiles("test")
-@ContextConfiguration(classes = {AssetStoreTest.TestApplication.class, AssetStoreImpl.class, AssetJpaDao.class, AssetStoreTest.class,
+@ContextConfiguration(classes = {AssetStoreTest.TestApplication.class, AssetStoreImpl.class, AssetDaoImpl.class, AssetStoreTest.class,
   DummyGraphStore.class, DatabaseConfig.class, DocumentLoaderConfig.class, DocumentLoaderProperties.class, DidResolverConfig.class, HttpDocumentResolver.class,
-  RdfContentTypeProperties.class, FileStoreConfig.class})
+  RdfContentTypeProperties.class, FileStoreConfig.class, DidDocumentResolver.class, JwtSignatureVerifier.class})
 @Slf4j
 @AutoConfigureEmbeddedDatabase(provider = DatabaseProvider.ZONKY)
 //@Import(EmbeddedNeo4JConfig.class)
 public class AssetStoreTest {
 
   @SpringBootApplication
-  @EnableJpaRepositories(basePackages = "eu.xfsc.fc.core.dao")
   public static class TestApplication {
 
     public static void main(final String[] args) {
@@ -144,7 +144,7 @@ public class AssetStoreTest {
    * it again.
    */
   //@Test
-  void test01StoreCredential() throws Exception {
+  void test01StoreCredential() {
     log.info("test01StoreCredential");
     final String content = "Some Test Content";
 
@@ -159,7 +159,7 @@ public class AssetStoreTest {
 
     List<Map<String, Object>> claims = graphStore.queryData(
         new GraphQuery("MATCH (n {uri: $uri}) RETURN n", Map.of("uri", assetMeta.getId()))).getResults();
-    Assertions.assertTrue(claims.size() > 0); //only 1 node found..
+    Assertions.assertTrue(!claims.isEmpty()); //only 1 node found.
 
     final ContentAccessor assetFileByHash = assetStorePublisher.getFileByHash(hash);
     assertEquals(assetFileByHash, assetMeta.getContentAccessor(), "Getting the asset file by hash is equal to the stored asset file");
@@ -169,7 +169,7 @@ public class AssetStoreTest {
     claims = graphStore.queryData(new GraphQuery("MATCH (n {uri: $uri}) RETURN n", Map.of("uri", assetMeta.getId()))).getResults();
     Assertions.assertEquals(0, claims.size());
 
-    Assertions.assertThrows(NotFoundException.class, () -> {assetStorePublisher.getByHash(hash);
+    assertThrows(NotFoundException.class, () -> {assetStorePublisher.getByHash(hash);
     });
   }
 
@@ -202,12 +202,8 @@ public class AssetStoreTest {
     assetStorePublisher.deleteAsset(hash1);
     assetStorePublisher.deleteAsset(hash2);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash1);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash2);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
   }
 
   //@Test
@@ -229,9 +225,7 @@ public class AssetStoreTest {
 
     final AssetMetadata assetMeta2 = createAssetMetadata("TestAsset/1", "TestUser/1",
         Instant.parse("2022-01-01T13:00:00Z"), Instant.parse("2022-01-02T13:00:00Z"), content1);
-    Assertions.assertThrows(ConflictException.class, () -> {
-      assetStorePublisher.storeCredential(assetMeta2, createVerificationResult(assetMeta2));
-    });
+    assertThrows(ConflictException.class, () -> assetStorePublisher.storeCredential(assetMeta2, createVerificationResult(assetMeta2)));
 
     nodes = graphStore.queryData(new GraphQuery(
         "MATCH (n) WHERE $graphUri IN n.claimsGraphUri RETURN n",
@@ -246,9 +240,7 @@ public class AssetStoreTest {
 
     assetStorePublisher.deleteAsset(hash1);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash1);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
   }
 
   /**
@@ -278,9 +270,7 @@ public class AssetStoreTest {
     byHash = assetStorePublisher.getByHash(hash);
     assertEquals(AssetStatus.REVOKED, byHash.getStatus(), "Status should have been changed to 'revoked'");
 
-    Assertions.assertThrows(ConflictException.class, () -> {
-      assetStorePublisher.changeLifeCycleStatus(hash, AssetStatus.ACTIVE);
-    });
+    assertThrows(ConflictException.class, () -> assetStorePublisher.changeLifeCycleStatus(hash, AssetStatus.ACTIVE));
     byHash = assetStorePublisher.getByHash(hash);
     assertEquals(AssetStatus.REVOKED, byHash.getStatus(),
         "Status should not have been changed from 'revoked' to 'active'.");
@@ -292,7 +282,7 @@ public class AssetStoreTest {
     log.debug("test04ChangeAssetStatus-2; got {} nodes", nodes.size());
     Assertions.assertEquals(0, nodes.size(), "Revoked asset should not appear in queries");
 
-    Assertions.assertThrows(ConflictException.class, () -> {
+    assertThrows(ConflictException.class, () -> {
       assetStorePublisher.storeCredential(assetMeta, createVerificationResult(0));
     }, "Adding the same asset after revocation should not be possible.");
 
@@ -305,9 +295,7 @@ public class AssetStoreTest {
 
     assetStorePublisher.deleteAsset(hash);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
   }
 
   /**
@@ -331,8 +319,8 @@ public class AssetStoreTest {
     int matchCount = byFilter.getResults().size();
     log.info("filter returned {} match(es)", matchCount);
     assertEquals(1, matchCount, "expected 1 filter match, but got " + matchCount);
-    assertEquals(assetMeta.getId(), byFilter.getResults().get(0).getId());
-    AssetMetadata firstResult = byFilter.getResults().get(0);
+    assertEquals(assetMeta.getId(), byFilter.getResults().getFirst().getId());
+    AssetMetadata firstResult = byFilter.getResults().getFirst();
     assertEquals(assetMeta.getAssetHash(), firstResult.getAssetHash(), "Incorrect Hash");
     assertEquals(assetMeta.getId(), firstResult.getId(), "Incorrect SubjectId");
     assertEquals(assetMeta.getContentAccessor(), firstResult.getContentAccessor(), "Incorrect asset content");
@@ -341,7 +329,7 @@ public class AssetStoreTest {
     matchCount = byFilter.getResults().size();
     log.info("filter returned {} match(es)", matchCount);
     assertEquals(1, matchCount, "expected 1 filter match, but got " + matchCount);
-    firstResult = byFilter.getResults().get(0);
+    firstResult = byFilter.getResults().getFirst();
     assertEquals(assetMeta.getAssetHash(), firstResult.getAssetHash(), "Incorrect Hash");
     assertEquals(assetMeta.getId(), firstResult.getId(), "Incorrect SubjectId");
     Assertions.assertNull(firstResult.getContentAccessor(), "Asset content should not have been returned.");
@@ -350,7 +338,7 @@ public class AssetStoreTest {
     matchCount = byFilter.getResults().size();
     log.info("filter returned {} match(es)", matchCount);
     assertEquals(1, matchCount, "expected 1 filter match, but got " + matchCount);
-    firstResult = byFilter.getResults().get(0);
+    firstResult = byFilter.getResults().getFirst();
     assertEquals(assetMeta.getAssetHash(), firstResult.getAssetHash(), "Incorrect Hash");
     Assertions.assertNull(firstResult.getId(), "SubjectId should not have been returned");
     assertEquals(assetMeta.getContentAccessor(), firstResult.getContentAccessor(), "Incorrect asset content");
@@ -359,16 +347,14 @@ public class AssetStoreTest {
     matchCount = byFilter.getResults().size();
     log.info("filter returned {} match(es)", matchCount);
     assertEquals(1, matchCount, "expected 1 filter match, but got " + matchCount);
-    firstResult = byFilter.getResults().get(0);
+    firstResult = byFilter.getResults().getFirst();
     assertEquals(assetMeta.getAssetHash(), firstResult.getAssetHash(), "Incorrect Hash");
     Assertions.assertNull(firstResult.getId(), "SubjectId should not have been returned");
     Assertions.assertNull(firstResult.getContentAccessor(), "Asset content should not have been returned.");
 
     assetStorePublisher.deleteAsset(hash);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
     log.info("#### Test 05 succeeded.");
   }
 
@@ -397,9 +383,7 @@ public class AssetStoreTest {
 
     assetStorePublisher.deleteAsset(hash);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
 
     log.info("#### Test 06 succeeded.");
   }
@@ -427,13 +411,11 @@ public class AssetStoreTest {
     final int matchCount = byFilter.getResults().size();
     log.info("filter returned {} match(es)", matchCount);
     assertEquals(1, matchCount, "expected 1 filter match, but got " + matchCount);
-    assertEquals(assetMeta.getId(), byFilter.getResults().get(0).getId());
+    assertEquals(assetMeta.getId(), byFilter.getResults().getFirst().getId());
 
     assetStorePublisher.deleteAsset(hash);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
     log.info("#### Test 07 succeeded.");
   }
 
@@ -462,9 +444,7 @@ public class AssetStoreTest {
     assertEquals(0, matchCount, "expected 0 filter matches, but got " + matchCount);
 
     assetStorePublisher.deleteAsset(hash);
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
 
     log.info("#### Test 08 succeeded.");
   }
@@ -510,24 +490,16 @@ public class AssetStoreTest {
     assertEquals(2, matchCount, "expected 2 filter match, but got " + matchCount);
     final AssetMetadata filterAssetMeta1 = byFilter.getResults().get(0);
     final AssetMetadata filterAssetMeta2 = byFilter.getResults().get(1);
-    assertEquals(true, assetMeta1.getId().equals(filterAssetMeta1.getId()) || assetMeta1.getId().equals(filterAssetMeta2.getId()),
-        "expected filter match assetMeta1 missing in results");
-    assertEquals(true, assetMeta2.getId().equals(filterAssetMeta1.getId()) || assetMeta2.getId().equals(filterAssetMeta2.getId()),
-        "expected filter match assetMeta2 missing in results");
+    assertTrue(assetMeta1.getId().equals(filterAssetMeta1.getId()) || assetMeta1.getId().equals(filterAssetMeta2.getId()), "expected filter match assetMeta1 missing in results");
+    assertTrue(assetMeta2.getId().equals(filterAssetMeta1.getId()) || assetMeta2.getId().equals(filterAssetMeta2.getId()), "expected filter match assetMeta2 missing in results");
 
     assetStorePublisher.deleteAsset(hash1);
     assetStorePublisher.deleteAsset(hash2);
     assetStorePublisher.deleteAsset(hash3);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash1);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash2);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash3);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
 
     log.info("#### Test 09 succeeded.");
   }
@@ -571,25 +543,19 @@ public class AssetStoreTest {
     final AssetMetadata filterAssetMeta1 = byFilter.getResults().get(0);
     final AssetMetadata filterAssetMeta2 = byFilter.getResults().get(1);
     final AssetMetadata filterAssetMeta3 = byFilter.getResults().get(2);
-    assertEquals(true, assetMeta1.getId().equals(filterAssetMeta1.getId()) || assetMeta1.getId().equals(filterAssetMeta2.getId())
-        || assetMeta1.getId().equals(filterAssetMeta3.getId()), "expected filter match assetMeta1 missing in results");
-    assertEquals(true, assetMeta2.getId().equals(filterAssetMeta1.getId()) || assetMeta2.getId().equals(filterAssetMeta2.getId())
-        || assetMeta2.getId().equals(filterAssetMeta3.getId()), "expected filter match assetMeta2 missing in results");
-    assertEquals(true, assetMeta3.getId().equals(filterAssetMeta1.getId()) || assetMeta3.getId().equals(filterAssetMeta2.getId())
-        || assetMeta3.getId().equals(filterAssetMeta3.getId()), "expected filter match assetMeta3 missing in results");
+    assertTrue(assetMeta1.getId().equals(filterAssetMeta1.getId()) || assetMeta1.getId().equals(filterAssetMeta2.getId())
+              || assetMeta1.getId().equals(filterAssetMeta3.getId()), "expected filter match assetMeta1 missing in results");
+    assertTrue(assetMeta2.getId().equals(filterAssetMeta1.getId()) || assetMeta2.getId().equals(filterAssetMeta2.getId())
+              || assetMeta2.getId().equals(filterAssetMeta3.getId()), "expected filter match assetMeta2 missing in results");
+    assertTrue(assetMeta3.getId().equals(filterAssetMeta1.getId()) || assetMeta3.getId().equals(filterAssetMeta2.getId())
+              || assetMeta3.getId().equals(filterAssetMeta3.getId()), "expected filter match assetMeta3 missing in results");
     assetStorePublisher.deleteAsset(hash1);
     assetStorePublisher.deleteAsset(hash2);
     assetStorePublisher.deleteAsset(hash3);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash1);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash2);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash3);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
 
     log.info("#### Test 10 succeeded.");
   }
@@ -598,7 +564,7 @@ public class AssetStoreTest {
    * Test applying an asset filter on non-matching validator.
    */
   @Test
-  void test11AFilterMatchingValidator() throws Exception {
+  void test11AFilterMatchingValidator() {
     log.info("test11AFilterMatchingValidator");
     final String id = "TestAsset/1";
     final String validatorId = "TestAsset/0815";
@@ -620,9 +586,7 @@ public class AssetStoreTest {
 
     assetStorePublisher.deleteAsset(hash);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
 
     log.info("#### Test 11A succeeded.");
   }
@@ -631,7 +595,7 @@ public class AssetStoreTest {
    * Test applying an asset filter on non-matching validator.
    */
   @Test
-  void test11BFilterNonMatchingValidator() throws Exception {
+  void test11BFilterNonMatchingValidator() {
     log.info("test11BFilterNonMatchingValidator");
     final String id = "TestAsset/1";
     final String validatorId = "TestAsset/0815";
@@ -653,9 +617,7 @@ public class AssetStoreTest {
 
     assetStorePublisher.deleteAsset(hash);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash));
 
     log.info("#### Test 11B succeeded.");
   }
@@ -701,19 +663,13 @@ public class AssetStoreTest {
     assetStorePublisher.deleteAsset(hash2);
     assetStorePublisher.deleteAsset(hash3);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash1);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash2);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash3);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
     log.info("#### Test 12 succeeded.");
   }
 
-  private CredentialVerificationResult verifyAssetCredential(String id, Instant firstSigInstant) throws UnsupportedEncodingException {
+  private CredentialVerificationResult verifyAssetCredential(String id, Instant firstSigInstant) {
     List<Validator> signatures = new ArrayList<>();
     signatures.add(new Validator("did:first", "", firstSigInstant));
     signatures.add(new Validator("did:second", "", Instant.now().plus(1, ChronoUnit.DAYS)));
@@ -763,15 +719,9 @@ public class AssetStoreTest {
     assetStorePublisher.deleteAsset(hash2);
     assetStorePublisher.deleteAsset(hash3);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash1);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash2);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash3);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
     log.info("#### Test 13 succeeded.");
   }
 
@@ -818,15 +768,9 @@ public class AssetStoreTest {
     assetStorePublisher.deleteAsset(hash2);
     assetStorePublisher.deleteAsset(hash3);
 
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash1);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash2);
-    });
-    Assertions.assertThrows(NotFoundException.class, () -> {
-      assetStorePublisher.getByHash(hash3);
-    });
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash1));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash2));
+    assertThrows(NotFoundException.class, () -> assetStorePublisher.getByHash(hash3));
     log.info("#### Test 13 succeeded.");
   }
 
